# cppgrad

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json  post_create.sh
benchmarks/: CMakeLists.txt  tensor_bench.cpp
examples/: tensor_example.cpp  xor_train.cpp
include/: Tensor.hpp  autograd.hpp  layer.hpp  op.hpp  optimizer.hpp  tensor.hpp
include/autograd/: autogradmeta.h  autogradmeta.hpp  function.h  function.hpp  graphviz_exporter.hpp
include/cppgrad/autograd/: autogradmeta.hpp  function.hpp
include/cppgrad/backend/: cpu_backend.h  cuda_backend.hpp
include/cppgrad/dispatcher/: kernelRegistry.h
include/cppgrad/enums/: dispatcherEnum.h
include/cppgrad/ops/: add.hpp
include/cppgrad/tensor/: tensor.hpp  tensorimpl.hpp  tensorutils.hpp
include/cppgrad/visualizer/: visualizer.hpp
include/ops/: add.h  add.hpp  div.hpp  exp.hpp  log.hpp  mul.h  mul.hpp  neg.hpp  pow.hpp  sub.hpp
include/tensor/: tensor.hpp  tensorimpl.h  tensorimpl.hpp  tensorutils.hpp
src/: main.cpp  tensor.cpp
src/autograd/: autogradmeta.cpp  function.cpp  graphviz_exporter.cpp
src/backend/: cpu_backend.cpp  cuda_backend.cu
src/ops/: add.cpp  div.cpp  exp.cpp  log.cpp  mul.cpp  neg.cpp  pow.cpp  sub.cpp
src/tensor/: tensor.cpp  tensorimpl.cpp  tensorutils.cpp
src/visualizer/: visualizer.cpp
test/: CMakeLists.txt  test_autograd.cpp  test_main.cpp  test_tensor.cpp
